<resources>
    <string name="app_name">Mind Twister</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="splash_button">Lets Go!</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="high_score">High Scores</string>
    <string name="about">About</string>
    <string name="quit">Quit</string>
    <string name="music">Music</string>
    <string name="profile">Profile</string>
    <string name="signout">Signout</string>
    <string name="instructions">Instructions</string>
    <string name="app_version_text">App Version : </string>
    <string name="release_date_text">Release Date : </string>
    <string name="release_date">28 July 2016</string>
    <string name="credits_text">Credits</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="login">Login</string>
    <string name="new_user">New User??</string>
    <string name="password">Password</string>
    <string name="nickname">nickname</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="age">age</string>
    <string name="register">register</string>
    <string name="welcome">WELCOME</string>
    <string name="start">START</string>
    <string name="tiles">Tiles: </string>
    <string name="level">Level: </string>
    <string name="level1">Level1</string>
    <string name="Level">Level</string>
    <string name="_3x3">3X3</string>
    <string name="memory_matrix">Memory Matrix</string>
    <string name="no_of_colors">Colors: </string>
    <string name="difficulty">Difficulty: </string>
    <string name="trials">Trials: </string>
    <string name="easy">Easy</string>
    <string name="login_activity">Login</string>
    <string name="registration_activity">Registration</string>
    <string name="about_activity">About</string>
    <string name="settings_activity">Settings</string>
    <string name="instructions_activity">Instructions</string>
    <string name="main_menu">Main Menu</string>
    <string name="feedback">Feedback</string>

    <!--feedback -->
    <string name="feedback_label">Feedback</string>
    <string name="submit_label">Submit</string>
    <string name="suggession">Write your helpful suggessions\nand send to mindtwister@gmail.com</string>
    <string name="privacy_policy_info">Mind Twister does not collect or share  personal information.
        We do not track or profile you.\n\nMind Twister is free to play. You can contact us
    at mindtwister@gmail.com about your privacy concern.</string>

    <string name="how_to_play_memory_matrix_game">How To Play\nMemory Matrix</string>
    <string name="how_to_play_rainbow_matrix_game">How To Play\nRainbow Matrix</string>
    <string name="how_to_play_sudoku_game">How To Play Sudoku Game</string>

    <!--about -->
    <string name="app_version_number">Version 1.0.0</string>
    <string name="copyright">2016 Mind Twister Inc.</string>
    <string name="app_text">All rights reserved.</string>

    <!-- settings -->
    <string name="profile_name">Name :</string>
    <string name="profile_username">Username :</string>
    <string name="profile_email">Email :</string>
    <string name="profile_age">Age :</string>
    <string name="music_switch">MUSIC</string>
    <string name="sound_fx">SOUND FX</string>

    <!-- Credits -->
    <string name="instruction_label">Select a game for Instructions</string>
    <string name="business_logic">Business Logic      :</string>
    <string name="database_designer"> Database Design :</string>
    <string name="ui_memory_matrix">UI memory matrix : </string>
    <string name="ui_rainbow_matrix">UI Rainbow matrix : </string>
    <string name="ui_designer">UI Designer  :</string>
    <string name="sound_effects">Sound Effects :</string>
    <string name="somya">  Somya</string>
    <string name="utkarsh">Utkarsh</string>
    <string name="kanchan">Kanchan</string>
    <string name="jyoti">Jyoti</string>
    <string name="gunjan">Gunjan</string>
    <string name="anupriya">AnuPriya</string>
    <string name="himanshu">Himanshu</string>
    <string name="write_here">Write here</string>
    <string name="sudoku">Sudoku</string>
    <string name="rainbow_matrix">Rainbow Matrix</string>
    <string name="choose_game">Choose a game</string>
    <string name="game_over">Game Over</string>
    <string name="select_difficulty">select the difficulty level</string>
    <string name="select_game">High Scores</string>
    <string name="sudoku_rule">The classic Sudoku game involves a grid of 81 squares. The grid is divided into nine blocks, each containing nine squares. The rules of the game are simple: each of the nine blocks has to contain all the numbers 1-9 within its squares. Each number can only appear once in a row, column or box.</string>
    <string name="game_rules">Game Rules</string>
</resources>
