<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_background">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/mind_twister" />

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView2"
        android:layout_below="@+id/imageView2"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/app_version_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#3e2723"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/versionText"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_toEndOf="@+id/versionText"
        android:text="@string/app_version_number"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#3e2723"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/versionText"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_toStartOf="@+id/appVersion"
        android:text="@string/release_date_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#3e2723"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/releaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appVersion"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_toEndOf="@+id/release"
        android:text="@string/release_date"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#3e2723"
        android:textStyle="bold" />

</RelativeLayout>