<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/credits_backgrounds"
    tools:context="com.mindtwister.mindtwister.viewHighScoresSelector">

    <TextView
        android:id="@+id/selectGame"
        style="@style/creditsStyle.creditsNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        android:text="select a game to view its high scores" />

    <Button
        android:id="@+id/memoryMatrixButton"
        style="@style/ButtonTheme"
        android:layout_below="@+id/selectGame"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:onClick="viewMemoryMatrixHighScoresOnClick"
        android:text="@string/memory_matrix" />

    <Button
        android:id="@+id/rainbowMatrixButton"
        style="@style/ButtonTheme"
        android:layout_below="@+id/memoryMatrixButton"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:onClick="viewRainbowMatrixHighScoresOnClick"
        android:text="@string/rainbow_matrix" />

    <Button
        android:id="@+id/sudokuButton"
        style="@style/ButtonTheme"
        android:layout_below="@+id/rainbowMatrixButton"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:onClick="viewSudokuHighScoresOnClick"
        android:text="@string/sudoku" />

</RelativeLayout>
