<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_profile320x320"
    tools:context=".FeedbackActivity">

    <RelativeLayout

        android:id="@+id/relativeLayout"
        android:layout_width="350dp"
        android:layout_height="120dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:text="@string/feedback_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/whiteColor"
            android:textSize="50sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"

        android:gravity="center_horizontal"
        android:text="@string/suggession"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        android:textStyle="bold" />


    <RelativeLayout

        android:id="@+id/relativeLayout2"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:background="@color/whiteColor">


        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/write_here"
            android:inputType="textMultiLine" />
    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/feebackButton"
        android:text="@string/submit_label"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>